[package]
name = "edk2_expr"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
derive_more = { version = "1.0.0", features = ["from"] }
getset = "0.1.3"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
strum = { version = "0.26.3", features = ["strum_macros"] }
strum_macros = "0.26.4"
thiserror = "1.0.63"
unescaper = "0.1.5"
uuid = "1.10.0"

[build-dependencies]
lalrpop = "0.21.0"
